--- a/.github/workflow/pipeline.yml
+++ b/.github/workflow/pipeline.yml
@@ -15,19 +15,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          java-version: '11'
-
-      - name: Build with Maven
-        run: mvn clean install
-
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }} 
+          
+      - name: Log in to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
+        
       - name: Build Docker image
-        run: docker build -t spring-boot-app-image .
+        run: docker build -t ${{ secrets.ECR_REPO }}:latest .
 
-      - name: Push Docker image
-        run: docker push spring-boot-app-image
-
-      - name: Deploy with Docker Compose
-        run: docker-compose up -d
+      - name: Push Docker image to Amazon ECR
+        run: docker push ${{ secrets.ECR_REPO }}:latest
