add deployment to CI/CD pipeline

--- a/.github/workflow/pipeline.yml
+++ b/.github/workflow/pipeline.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  docker-build-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -30,3 +30,17 @@ jobs:
 
       - name: Push Docker image to Amazon ECR
         run: docker push ${{ secrets.ECR_REPO }}:latest
+
+  deploy:
+    runs-on: ubuntu-latest 
+    needs: docker-build-push
+    steps:
+      - name: Deploy via SSH to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY_EC2 }}
+          scripts: |
+            docker compose pull
+            docker compose up -d --force-recreate
